--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "theme_color": "#c94d4d",
+    "theme_color": "#f9f9f9",
     "background_color": "#f9f9f9",
     "display": "standalone",
     "scope": "/",
