--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "/index.html",
-    "name": "Fitness Trcker",
+    "name": "Fitness Trckr",
     "short_name": "Trckr",
     "description": "A PWA fitness tracker",
     "icons": [
